[core] Using Object.valueOf() rather than new Object() is faster in some cases  - requires Java > 1.5